color border revisar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,3 +19,11 @@ mat-drawer-container {
   overflow-y: auto !important;
   background-color: var(--bg-drawer);
 }
+
+.mat-drawer-side {
+  border-right-color: var(--border-color-nav) !important;
+}
+
+.drawer .mat-card {
+  background-color: var(--bg-card) !important;
+}
