--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -74,7 +74,7 @@ a {
 
 .example-container {
   height: 500px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid var(--color-border);
 }
 
 .example-sidenav-content {
@@ -150,7 +150,7 @@ a {
   ::-webkit-scrollbar-thumb {
     background-color: #b3b3b3;
     border-radius: 10px;
-    border: 2px solid transparent;
+    border: 2px solid var(--color-border);
     background-clip: padding-box;
   }
 
@@ -171,7 +171,7 @@ a {
 ::-webkit-scrollbar-thumb {
   background-color: #b3b3b3;
   border-radius: 10px;
-  border: 2px solid transparent;
+  border: 2px solid var(--color-border);
   background-clip: padding-box;
 }
 
