--- a/src/app/modules/home/ventas-dia/ventas-dia.component.scss
+++ b/src/app/modules/home/ventas-dia/ventas-dia.component.scss
@@ -1,5 +1,4 @@
 mat-card {
-  background-color: #ffffff;
   border-radius: 8px;
   padding: 10px 15px;
   color: #494949;
@@ -9,7 +8,7 @@ mat-card {
 h2 {
   font-size: 15px;
   font-weight: lighter;
-  color: #575757;
+  color: var(--color-text-title);
   margin-bottom: 10px;
 }
 
@@ -17,17 +16,20 @@ h1 {
   font-weight: bold;
   font-size: 18px;
   margin: 0;
+  color: var(--color-text-title);
 }
 
 h3 {
   font-size: 14px;
   font-weight: normal;
   margin: 0;
+  color: var(--color-text-title);
 }
 
 .currency-symbol {
   font-weight: bold;
   font-size: 14px;
+  color: var(--color-text-title);
 }
 
 .value {
