--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
   --bg-drawer: #fdfdfd;
   --bg-card: #fffff;
   --color-border-card: #fffff;
+  --color-text-title: #575757;
 }
 
 .dark-mode {
@@ -23,6 +24,7 @@
   --bg-drawer: #161621;
   --bg-card: #2A2A3B;
   --color-border-card: #3E3E4E;
+  --color-text-title: #EDEDED;
 }
 
 
@@ -40,6 +42,16 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
 }
+
+mat-card {
+  background-color: var(--bg-card) !important;
+  border: 1px solid var(--border-color-nav);
+}
+
+h2 {
+  color: var(--color-text-title);
+}
+
 
 .titulo {
   font-weight: 500;
