--- a/src/app/modules/comprobante/consultar-comprobante/consultar-comprobante.component.html
+++ b/src/app/modules/comprobante/consultar-comprobante/consultar-comprobante.component.html
@@ -3,7 +3,13 @@
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
         <p class="titulo">Comprobantes</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3 botonR btn-registrar" (click)="registrarNuevoComprobante()">Registrar nuevo comprobante</button>
+        <button
+          mat-stroked-button
+          color="warn"
+          class="btn round mb-3 botonR btn-registrar"
+          (click)="registrarNuevoComprobante()"
+          [appRole]="['Administrador', 'Cajero', 'Encargado']"
+        >Registrar nuevo comprobante</button>
       </div>
     </div>
 
@@ -155,7 +161,7 @@
                 <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verComprobante(comprobante, true)">
                   <mat-icon class="editar">edit</mat-icon>
                 </button>
-                <button mat-icon-button color="primary"  matTooltip="Eliminar" (click)="eliminarComprobante(comprobante.id)">
+                <button mat-icon-button color="primary"  matTooltip="Eliminar" (click)="eliminarComprobante(comprobante.id)" [appRole]="['Administrador', 'Encargado']">
                   <mat-icon class="eliminar">delete</mat-icon>
                 </button>
               </mat-cell>
