background hover darkmode home

--- a/src/app/modules/home/asistencias-empleados/asistencias-empleados.component.scss
+++ b/src/app/modules/home/asistencias-empleados/asistencias-empleados.component.scss
@@ -87,5 +87,5 @@ h3 {
 }
 
 .asistencia-item:hover {
-  background: #f8f8f8; /* Cambia el fondo al pasar el mouse */
+  background: var(--bg-hover-items-home);
 }
