--- a/src/app/modules/home/ordenes-de-compra/ordenes-de-compra.component.scss
+++ b/src/app/modules/home/ordenes-de-compra/ordenes-de-compra.component.scss
@@ -92,7 +92,7 @@ h3 {
 }
 
 .orden-item:hover {
-  background: #f8f8f8; /* Cambia el fondo al pasar el mouse */
+  background: var(--bg-hover-items-home);
 }
 
 .estado-recibido {
