--- a/src/app/modules/home/productos-stock-limitado/productos-stock-limitado.component.scss
+++ b/src/app/modules/home/productos-stock-limitado/productos-stock-limitado.component.scss
@@ -77,5 +77,5 @@ h3 {
 }
 
 .product-item:hover {
-  background: #f8f8f8; /* Cambia el fondo al pasar el mouse */
+  background: var(--bg-hover-items-home);
 }
