--- a/src/app/modules/home/ultimos-clientes-registrados/ultimos-clientes-registrados.component.scss
+++ b/src/app/modules/home/ultimos-clientes-registrados/ultimos-clientes-registrados.component.scss
@@ -78,5 +78,5 @@ h3 {
 }
 
 .cliente-item:hover {
-  background: #f8f8f8; /* Cambia el fondo al pasar el mouse */
+  background: var(--bg-hover-items-home);
 }
