--- a/src/app/modules/gerencia/consultar-arqueo-caja/consultar-arqueo-caja.component.html
+++ b/src/app/modules/gerencia/consultar-arqueo-caja/consultar-arqueo-caja.component.html
@@ -3,7 +3,13 @@
     <div class="row">
       <div class="d-flex justify-content-between align-items-center w-100">
         <p class="titulo">Arqueos de Caja</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3 btn-registrar" (click)="registrarNuevoArqueo()">Registrar nuevo arqueo de caja</button>
+        <button
+          mat-stroked-button
+          color="warn"
+          class="btn round mb-3 btn-registrar"
+          (click)="registrarNuevoArqueo()"
+          [appRole]="['Administrador', 'Encargado', 'Cajero']"
+        >Registrar nuevo arqueo de caja</button>
       </div>
     </div>
     <mat-divider></mat-divider>
