--- a/src/app/modules/gerencia/consultar-caja/consultar-caja.component.html
+++ b/src/app/modules/gerencia/consultar-caja/consultar-caja.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="d-flex justify-content-between align-items-center w-100">
         <p class="titulo">Cajas</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevaCaja()">Registrar nueva caja</button>
+        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevaCaja()" [appRole]="['Administrador', 'Encargado']">Registrar nueva caja</button>
       </div>
     </div>
     <mat-divider></mat-divider>
@@ -58,10 +58,10 @@
                 <button class="btn" mat-icon-button matTooltip="Ver" (click)="verCaja(caja, false)">
                   <mat-icon class="ver">visibility</mat-icon>
                 </button>
-                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verCaja(caja, true)">
+                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verCaja(caja, true)" [appRole]="['Administrador', 'Cajero', 'Encargado']">
                   <mat-icon class="editar">edit</mat-icon>
                 </button>
-                <button mat-icon-button color="primary" matTooltip="Eliminar" (click)="eliminarCaja(caja.id)">
+                <button mat-icon-button color="primary" matTooltip="Eliminar" (click)="eliminarCaja(caja.id)" [appRole]="['Administrador', 'Encargado']">
                   <mat-icon class="eliminar">delete</mat-icon>
                 </button>
               </mat-cell>
