--- a/src/app/modules/productos/consultar-productos/consultar-productos.component.html
+++ b/src/app/modules/productos/consultar-productos/consultar-productos.component.html
@@ -3,7 +3,13 @@
     <div class="row">
       <div class="d-flex justify-content-between align-items-center w-100">
         <p class="titulo">Productos</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3 botonR" (click)="registrarNuevoProducto()">Registrar nuevo producto</button>
+        <button
+          mat-stroked-button
+          color="warn"
+          class="btn round mb-3 botonR"
+          (click)="registrarNuevoProducto()"
+          [appRole]="['Administrador', 'Encargado']"
+        >Registrar nuevo producto</button>
       </div>
     </div>
     <mat-divider></mat-divider>
@@ -118,10 +124,10 @@
                 <button class="btn" mat-icon-button matTooltip="Ver" (click)="verProducto(producto, false)">
                   <mat-icon class="ver">visibility</mat-icon>
                 </button>
-                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verProducto(producto, true)">
+                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verProducto(producto, true)" [appRole]="['Administrador', 'Cajero', 'Encargado']">
                   <mat-icon class="editar">edit</mat-icon>
                 </button>
-                <button mat-icon-button color="primary" matTooltip="Eliminar" (click)="eliminarProducto(producto.id)">
+                <button mat-icon-button color="primary" matTooltip="Eliminar" (click)="eliminarProducto(producto.id)" [appRole]="['Administrador', 'Encargado']">
                   <mat-icon class="eliminar">delete</mat-icon>
                 </button>
               </mat-cell>
