--- a/src/app/modules/productos/registrar-producto/registrar-producto.component.html
+++ b/src/app/modules/productos/registrar-producto/registrar-producto.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
       <p class="titulo">{{esConsulta ? 'Consultar producto' : 'Registrar producto'}}</p>
-      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()">
+      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()" [appRole]="['Administrador', 'Cajero', 'Encargado']">
         <mat-icon class="editar mb-3">edit</mat-icon>
       </button>
     </div>
