--- a/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.html
+++ b/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.html
@@ -3,7 +3,13 @@
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
         <p class="titulo">Promociones</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3 botonR btn-registrar" (click)="registrarNuevaPromocion()">Registrar nueva promoción</button>
+        <button
+          mat-stroked-button
+          color="warn"
+          class="btn round mb-3 botonR btn-registrar"
+          (click)="registrarNuevaPromocion()"
+          [appRole]="['Administrador', 'Encargado']"
+        >Registrar nueva promoción</button>
       </div>
     </div>
 
@@ -92,10 +98,10 @@
                 <button class="btn" mat-icon-button matTooltip="Ver" (click)="verPromocion(promocion, false)">
                   <mat-icon class="ver">visibility</mat-icon>
                 </button>
-                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verPromocion(promocion, true)">
+                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verPromocion(promocion, true)" [appRole]="['Administrador', 'Encargado']">
                   <mat-icon class="editar">edit</mat-icon>
                 </button>
-                <button mat-icon-button color="primary"  matTooltip="Eliminar" (click)="eliminarPromocion(promocion.id)">
+                <button mat-icon-button color="primary"  matTooltip="Eliminar" (click)="eliminarPromocion(promocion.id)" [appRole]="['Administrador', 'Encargado']">
                   <mat-icon class="eliminar">delete</mat-icon>
                 </button>
               </mat-cell>
