--- a/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
+++ b/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
         <p class="titulo">Empleados</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3 botonR" (click)="registrarNuevoEmpleado()">Registrar nuevo empleado</button>
+        <button mat-stroked-button color="warn" class="btn round mb-3 botonR" (click)="registrarNuevoEmpleado()" [appRole]="['Encargado']">Registrar nuevo empleado</button>
       </div>
     </div>
 
@@ -81,10 +81,10 @@
                 <button class="btn" mat-icon-button matTooltip="Ver" (click)="verEmpleado(usuario, false)">
                   <mat-icon class="ver">visibility</mat-icon>
                 </button>
-                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verEmpleado(usuario, true)">
+                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verEmpleado(usuario, true)" [appRole]="['Encargado']">
                   <mat-icon class="editar">edit</mat-icon>
                 </button>
-                <button mat-icon-button color="primary"  matTooltip="Eliminar" (click)="eliminarUsuario(usuario.id)">
+                <button mat-icon-button color="primary"  matTooltip="Eliminar" (click)="eliminarUsuario(usuario.id)" [appRole]="['Encargado']">
                   <mat-icon class="eliminar">delete</mat-icon>
                 </button>
               </mat-cell>
