--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 
 :root {
+  --naranja-primario: #e15b35;
   --header-bg: #f5f5f5; /* Fondo del header para el tema claro */
   --header-color: #000000; /* Color del texto para el tema claro */
   --menu-bg: #ffffff; /* Fondo del menú para el tema claro */
@@ -14,9 +15,12 @@
   --color-text-title: #575757;
   --color-title-item-card: #494949;
   --bg-hover-items-home: #f8f8f8;
+  --mat-divider-color: #ddd;
+  --mdc-outlined-button-outline-color: red
 }
 
 .dark-mode {
+  --naranja-primario: #e15b35;
   --header-bg: #2A2A3B; /* Fondo del header para el tema oscuro */
   --header-color: #EDEDED; /* Color del texto para el tema oscuro */
   --menu-bg: #3E3E4E; /* Fondo del menú para el tema oscuro */
@@ -29,7 +33,11 @@
   --color-text-title: #EDEDED;
   --color-title-item-card: #aeaeae;
   --bg-hover-items-home: #2e2e3c;
+  --mat-divider-color: #414141;
+  --mdc-outlined-button-outline-color: blue
 }
+
+
 
 html, body {
   height: 100%;
@@ -54,6 +62,10 @@ mat-card {
 
 h2 {
   color: var(--color-text-title) !important;
+}
+
+.mat-divider {
+  color: red;
 }
 
 
