fix: adm no puede hacer ventas

--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -8,7 +8,7 @@
           color="warn"
           class="btn round mb-3"
           (click)="registrarNuevaVenta()"
-          [appRole]="['Administrador', 'Encargado', 'Cajero']"
+          [appRole]="['Encargado', 'Cajero']"
         >Registrar nueva venta</button>
       </div>
     </div>
