avances modo oscuro

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -107,8 +107,8 @@
     </div>
 
     <!-- Factura de venta -->
-      <div class="col mt-md-2" [formGroup]="form">
-        <mat-card class="p-4 sale-invoice">
+      <div class="col" [formGroup]="form">
+        <mat-card class="p-4 sale-invoice mt-1">
           <h2 class="invoice-title">Detalle de venta</h2>
           <mat-divider></mat-divider>
           <br>
