--- a/src/app/modules/reportes/generar-reportes/generar-reportes.component.scss
+++ b/src/app/modules/reportes/generar-reportes/generar-reportes.component.scss
@@ -1,12 +1,12 @@
 .seccion-nombre {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #333;
+  color: var(--title-generar-reporte);
   margin: 0;
 }
 
 .icono-seccion {
-  color: #333;
+  color: var(--title-generar-reporte);
   margin-right: 20px;
   font-size: 1.7rem;
 }
@@ -15,14 +15,14 @@
   margin-bottom: 20px;
   padding: 15px;
   border-radius: 8px;
-  background-color: #fefefe;
+  background-color: var(--bg-seccion-generar-reporte);
 }
 
 .reporte-container {
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #fefefe;
+  background-color: var(--bg-seccion-generar-reporte);
 }
 
 .titulo-reporte {
@@ -40,7 +40,7 @@
 }
 
 .reporte-container:hover {
-  background-color: #f1f0f0;
+  background-color: var(--bg-hover-generar-reporte);
   cursor: pointer;
 }
 
