--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,9 @@
   --button-hover: #e15b35;
   --boder-mat-card-calido: 0px;
   --color-input-text-box: #131313;
+  --bg-seccion-generar-reporte: #fefefe;
+  --title-generar-reporte: #333;
+  --bg-hover-generar-reporte: #f1f0f0;
 }
 
 .dark-mode {
@@ -41,6 +44,9 @@
   --button-hover: #e15b35;
   --boder-mat-card-calido: 1px solid #414141;
   --color-input-text-box: #EDEDED;
+  --bg-seccion-generar-reporte: #2a2a3b;
+  --title-generar-reporte: #EDEDED;
+  --bg-hover-generar-reporte: #2e2e42;
 }
 
 html, body {
