divider table color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@
   --bg-seccion-generar-reporte: #fefefe;
   --title-generar-reporte: #333;
   --bg-hover-generar-reporte: #f1f0f0;
+  --mat-table-row-item-outline-color: #ddd;
 }
 
 .dark-mode {
@@ -47,6 +48,7 @@
   --bg-seccion-generar-reporte: #2a2a3b;
   --title-generar-reporte: #EDEDED;
   --bg-hover-generar-reporte: #2e2e42;
+  --mat-table-row-item-outline-color: #3E3E4E;
 }
 
 html, body {
