inputs borders colors

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,8 @@
   --title-generar-reporte: #333;
   --bg-hover-generar-reporte: #f1f0f0;
   --mat-table-row-item-outline-color: #ddd;
+  --mdc-outlined-text-field-outline-color: #575757;
+  --mdc-outlined-text-field-hover-outline-color: #353535;
 }
 
 .dark-mode {
@@ -49,6 +51,8 @@
   --title-generar-reporte: #EDEDED;
   --bg-hover-generar-reporte: #2e2e42;
   --mat-table-row-item-outline-color: #3E3E4E;
+  --mdc-outlined-text-field-outline-color: #EDEDED;
+  --mdc-outlined-text-field-hover-outline-color: #fafafa;
 }
 
 html, body {
