--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,8 @@
   --mdc-outlined-text-field-hover-outline-color: #353535;
   --btn-border-registrar: 1px solid #e15b35;
   --btn-radius-registrar: 5px;
+  --mdc-outlined-button-outline-color: #ffffff;
+  --mdc-outlined-button-outline-width: 0px;
 }
 
 .dark-mode {
@@ -55,6 +57,8 @@
   --mdc-outlined-text-field-hover-outline-color: #fafafa;
   --btn-border-registrar: 1px solid #e15b35;
   --btn-radius-registrar: 5px;
+  --mdc-outlined-button-outline-color: #2A2A3B;
+  --mdc-outlined-button-outline-width: 0px;
 }
 
 html, body {
