--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -20,6 +20,8 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   position: relative;
   padding: 10px;
+  background: var(--bg-card);
+  border: var(--border-productos-venta);
 }
 
 /* Círculo con la cantidad seleccionada */
