--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,11 @@
 
 :root {
   --naranja-primario: #e15b35;
-  --header-bg: #f5f5f5; /* Fondo del header para el tema claro */
-  --header-color: #000000; /* Color del texto para el tema claro */
-  --menu-bg: #ffffff; /* Fondo del menú para el tema claro */
-  --menu-item-hover-bg: #efefef; /* Fondo de los ítems al hover (claro) */
-  --menu-item-color: #000000; /* Color del texto del menú (claro) */
+  --header-bg: #f5f5f5;
+  --header-color: #000000;
+  --menu-bg: #ffffff;
+  --menu-item-hover-bg: #efefef;
+  --menu-item-color: #000000;
   --border-color-nav: #ddd;
   --bg-drawer: #fdfdfd;
   --bg-card: #fffff;
@@ -29,15 +29,16 @@
   --btn-radius-registrar: 5px;
   --mdc-outlined-button-outline-color: #ffffff;
   --mdc-outlined-button-outline-width: 0px;
+  --border-productos-venta: 1px solid #ddd;
 }
 
 .dark-mode {
   --naranja-primario: #e15b35;
-  --header-bg: #2A2A3B; /* Fondo del header para el tema oscuro */
-  --header-color: #EDEDED; /* Color del texto para el tema oscuro */
-  --menu-bg: #3E3E4E; /* Fondo del menú para el tema oscuro */
-  --menu-item-hover-bg: #5A5A6E; /* Fondo de los ítems al hover (oscuro) */
-  --menu-item-color: #EDEDED; /* Color del texto del menú (oscuro) */
+  --header-bg: #2A2A3B;
+  --header-color: #EDEDED;
+  --menu-bg: #3E3E4E;
+  --menu-item-hover-bg: #5A5A6E;
+  --menu-item-color: #EDEDED;
   --border-color-nav: #414141;
   --bg-drawer: #161621;
   --bg-card: #2A2A3B;
@@ -59,6 +60,7 @@
   --btn-radius-registrar: 5px;
   --mdc-outlined-button-outline-color: #2A2A3B;
   --mdc-outlined-button-outline-width: 0px;
+  --border-productos-venta: 1px solid #3E3E4E;
 }
 
 html, body {
