border radius img products

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -197,6 +197,7 @@
   max-height: 100%;
   object-fit: cover;
   height: 180px; /* Aumenta el tamaño de la imagen */
+  border-radius: 10%;
 }
 
 .product-icon {
