price producto venta

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -64,7 +64,7 @@
 
               <!-- Nombre y código de barra del producto -->
               <div class="row align-items-center text-center my-3">
-                <div class="col">
+                <div class="col nombre-producto">
                   {{producto.nombre}}
                 </div>
                 <div class="w-100 codigoBarra">
