producto seleccionado para venta borde

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -1,6 +1,6 @@
 /* Producto seleccionado */
 .selected-card {
-  border: 2px solid #e15b35;
+  border: 2px solid #e15b35 !important;
 }
 
 /* Estilo general del card de productos */
