--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -247,8 +247,8 @@
               <div class="d-flex justify-content-between align-items-center border-bottom p-3 producto-item">
                 <div class="col-4 d-flex flex-column">
                   <span class="m-0"><b>{{ producto.nombre }}</b></span>
-                  <span class="text-muted">P/U: $ {{ (producto.precioConIVA) | number:'1.2-2':'es-AR' }}</span>
-                  <span class="text-muted" *ngIf="(producto.promocion?.id) &&  producto.promocion?.id != -1" [matTooltip]="producto.promocion.nombre">Promoción: - {{ producto.promocion.porcentajeDescuento + '%' }}</span>
+                  <span class="text-muted-custom">P/U: $ {{ (producto.precioConIVA) | number:'1.2-2':'es-AR' }}</span>
+                  <span class="text-muted-custom" *ngIf="(producto.promocion?.id) &&  producto.promocion?.id != -1" [matTooltip]="producto.promocion.nombre">Promoción: - {{ producto.promocion.porcentajeDescuento + '%' }}</span>
                 </div>
                 <div class="d-flex align-items-center col-4 justify-content-center">
                   <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)">-</button>
