--bs-secondary-bg

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@
   --mdc-outlined-button-outline-color: #ffffff;
   --mdc-outlined-button-outline-width: 0px;
   --border-productos-venta: 1px solid #ddd;
+  --bs-secondary-bg: #fdfdfd;
 }
 
 .dark-mode {
@@ -61,6 +62,7 @@
   --mdc-outlined-button-outline-color: #2A2A3B;
   --mdc-outlined-button-outline-width: 0px;
   --border-productos-venta: 1px solid #3E3E4E;
+  --bs-secondary-bg: #2A2A3B;
 }
 
 html, body {
