--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -171,7 +171,7 @@
 }
 
 .producto-item:hover {
-  background-color: #f8f8f8;
+  background-color: var(--bg-hover-items-home);
   cursor: pointer;
 }
 
