arqueo dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,7 @@
   --mdc-outlined-button-outline-width: 0px;
   --border-productos-venta: 1px solid #ddd;
   --bs-secondary-bg: #fdfdfd;
+  --detalle-arqueo: #555;
 }
 
 .dark-mode {
@@ -63,6 +64,7 @@
   --mdc-outlined-button-outline-width: 0px;
   --border-productos-venta: 1px solid #3E3E4E;
   --bs-secondary-bg: #2A2A3B;
+  --detalle-arqueo: #bebebe;
 }
 
 html, body {
