--- a/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.scss
+++ b/src/app/modules/gerencia/detalle-arqueo/detalle-arqueo.component.scss
@@ -25,7 +25,7 @@
   padding: 15px;
   margin-bottom: 10px;
   border-radius: 10px;
-  background-color: #fefefe;
+  background-color: var(--bg-seccion-generar-reporte);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
@@ -33,7 +33,7 @@
 .forma-pago-nombre {
   font-size: 1.2rem;
   font-weight: bold;
-  color: #333;
+  color: var(--title-generar-reporte);
   display: flex;
   align-items: center;
 }
@@ -57,6 +57,7 @@
   padding: 10px;
   border-top: 1px solid #ddd;
   margin-top: 10px;
+  color: var(--title-generar-reporte);
 }
 
 /* Títulos de ingresos y egresos */
@@ -79,7 +80,7 @@
 /* Detalles */
 .detalle {
   font-size: 0.9rem;
-  color: #555;
+  color: var(--detalle-arqueo);
   margin-left: 15px;
 }
 
@@ -96,7 +97,7 @@
   padding: 15px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  background-color: #fefefe;
+  background-color: var(--bg-seccion-generar-reporte);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -105,6 +106,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  color: var(--title-generar-reporte);
 }
 
 .diferencia-icon {
@@ -137,7 +139,7 @@
 
 .label {
   font-size: 1rem;
-  color: #555;
+  color: var(--detalle-arqueo);
 }
 
 /* Clase base para diferencia */
