--- a/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
+++ b/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
@@ -1,4 +1,4 @@
-<div class="container py-3 col-xl-11 form-emergente">
+<div class="container py-3 col-xl-11 form-emergente" [class.dark-mode]="darkMode">
   <br>
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
