--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@
   --mdc-outlined-text-field-focus-outline-color: #e15b35;
   --mdc-outlined-text-field-focus-label-text-color: #e15b35;
   --mdc-outlined-text-field-label-text-color: #131313;
+  --mdc-outlined-text-field-hover-label-text-color: #606060;
   --btn-border-registrar: 1px solid #e15b35;
   --btn-radius-registrar: 5px;
   --mdc-outlined-button-outline-color: #ffffff;
@@ -68,6 +69,7 @@
   --mdc-outlined-text-field-focus-outline-color: #e15b35;
   --mdc-outlined-text-field-focus-label-text-color: #e15b35;
   --mdc-outlined-text-field-label-text-color: #EDEDED;
+  --mdc-outlined-text-field-hover-label-text-color: #8c8c8c;
   --btn-border-registrar: 1px solid #e15b35;
   --btn-radius-registrar: 5px;
   --mdc-outlined-button-outline-color: #2A2A3B;
