--- a/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
+++ b/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
@@ -1,4 +1,4 @@
-<div class="container py-3 col-xl-11 form-emergente">
+<div class="container py-3 col-xl-12 px-4" [class.dark-mode]="darkMode">
   <br>
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
