--- a/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.scss
+++ b/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.scss
@@ -23,6 +23,9 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   position: relative;
   padding: 10px;
+  background-color: var(--bg-card);
+  border: var(--border-productos-venta);
+  cursor: pointer;
 }
 
 .selected-pedido-card {
@@ -79,7 +82,8 @@
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 16px;
   padding: 20px;
-  border: 1px solid #ccc;
+  border: var(--border-productos-venta);
   border-radius: 8px;
   color: grey;
+  background-color: var(--bg-card);
 }
