inputs dark disable

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,8 +63,8 @@
   --bg-hover-generar-reporte: #2e2e42;
   --mat-table-row-item-outline-color: #3E3E4E;
   --mdc-outlined-text-field-outline-color: #EDEDED;
-  --mdc-outlined-text-field-disabled-outline-color: #1b1b23;
-  --mdc-outlined-text-field-disabled-label-text-color: rgba(21, 21, 24, 0.98);
+  --mdc-outlined-text-field-disabled-outline-color: #363642;
+  --mdc-outlined-text-field-disabled-label-text-color: rgba(53, 53, 63, 0.98);
   --mdc-outlined-text-field-hover-outline-color: #fafafa;
   --mdc-outlined-text-field-focus-outline-color: #e15b35;
   --mdc-outlined-text-field-focus-label-text-color: #e15b35;
