--- a/src/app/modules/productos/registrar-producto/registrar-producto.component.html
+++ b/src/app/modules/productos/registrar-producto/registrar-producto.component.html
@@ -1,5 +1,5 @@
 <!-- Formulario HTML -->
-<div class="container py-3 col-xl-11 form-emergente">
+<div class="container py-3 px-4 col-xl-12" [class.dark-mode]="darkMode">
   <br>
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
